--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
+appdirs==1.4.3
 asgiref==3.2.7
+baron==0.9
+dj-database-url==0.5.0
+dj-email-url==1.0.0
 Django==3.0.5
+django-cache-url==3.1.2
 django-crispy-forms==1.9.0
+django-environ==0.4.5
+django-environs==0.1.1
+environs==7.4.0
+gunicorn==20.0.4
+marshmallow==3.5.1
+python-dotenv==0.13.0
 pytz==2019.3
+redbaron==0.9.2
+rply==0.7.7
 sqlparse==0.3.1
