--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ django-cache-url==3.1.2
 django-crispy-forms==1.9.0
 django-environ==0.4.5
 django-environs==0.1.1
+django-heroku==0.3.1
 environs==7.4.0
 gunicorn==20.0.4
 marshmallow==3.5.1
+psycopg2==2.8.5
 python-dotenv==0.13.0
 pytz==2019.3
 redbaron==0.9.2
 rply==0.7.7
 sqlparse==0.3.1
+whitenoise==5.0.1
